test homepage/landingpage display and solve header not being visible

--- a/app/sass/_buttons.sass
+++ b/app/sass/_buttons.sass
@@ -6,8 +6,6 @@
 header button
   @extend button
   background-color: $comp-color
-  @media all and (min-width: 420px)
-    display: block
   &:hover
     background-color: $comp-color-lighten10
 
