--- a/app/sass/_layout.sass
+++ b/app/sass/_layout.sass
@@ -3,10 +3,11 @@
 header
   position: relative
 
-header figure
-  position: absolute
-  top: golden-ratio($em-base, -3)
-  left: golden-ratio($em-base, -3)
+header figure img
+  // position: relative
+  // top: golden-ratio($em-base, -3)
+  // left: golden-ratio($em-base, -3)
+  margin: golden-ratio($em-base, 0)
 
 .button-container
   position: absolute
@@ -27,10 +28,10 @@ article
 
 .testimonial
   display: inline-block
-  width: 49%
-  &:nth-child(odd)
-    margin-right: 2%
+  width: 100%
   vertical-align: top
   @media all and (min-width: 420px)
-    width: 100%
+    width: 45%
+    &:nth-child(even)
+      margin-right: 10%
 
