--- a/app/sass/_reset.sass
+++ b/app/sass/_reset.sass
@@ -37,8 +37,8 @@ body
   background-color: $comp-color-lighten40
   @include box-sizing(border-box)
 
-//setting responsive images
+//setting responsive images, but this was causing the header logo to insist on being in the center, so removed this for now
 //images should be placed inside another element
-img
-  display: block
-  width: 100%
+// img
+//   display: block
+//   width: 100%
