--- a/app/sass/_typography.sass
+++ b/app/sass/_typography.sass
@@ -32,3 +32,7 @@ h2
 small
   font
     size: golden-ratio($em-base, -1)
+
+.testimonial
+  p
+    font-style: italic
