--- a/app/sass/modules/_header.sass
+++ b/app/sass/modules/_header.sass
@@ -4,10 +4,10 @@ header
   background-color: $primary-color
 
 header figure
-  background-color: $comp-color-lighten40
+  // background-color: $comp-color-lighten40
 
-header figure img
-  margin: auto
+// header figure img
+//   margin: auto
 
-#logo
-  background: transparent image-url('ty_logo_v0.png') no-repeat
+// #logo
+//   background: transparent image-url('ty_logo_v0.png') no-repeat
